<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Number1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#100F0F"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Number2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Number2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#171616"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Number1" />

    <TextView
        android:id="@+id/result"
        android:layout_width="305dp"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:hint="@string/result"
        android:textAlignment="center"
        android:textColor="#131212"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Number2" />

    <Button
        android:id="@+id/add"
        android:layout_width="135dp"
        android:layout_height="67dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="35dp"
        android:onClick="addNumber"
        android:text="@string/add"
        android:textAlignment="center"
        android:textColor="#121111"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/divide"
        app:layout_constraintEnd_toStartOf="@+id/sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/sub"
        android:layout_width="136dp"
        android:layout_height="68dp"
        android:layout_marginTop="10dp"
        android:onClick="subNumber"
        android:text="@string/sub"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/divide"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="136dp"
        android:layout_height="68dp"
        android:layout_marginTop="10dp"
        android:onClick="multiplyNumber"
        android:text="@string/multi"
        android:textAlignment="center"
        android:textColor="#151313"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/mod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sub"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.205" />

    <Button
        android:id="@+id/divide"
        android:layout_width="204dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="120dp"
        android:onClick="divideNumber"
        android:text="@string/divide"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/mod"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/mod"
        android:layout_width="204dp"
        android:layout_height="67dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="5dp"
        android:onClick="modNumber"
        android:text="@string/mod"
        android:textAlignment="center"
        android:textColor="#100F0F"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divide"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/equal"
        android:layout_width="204dp"
        android:layout_height="58dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="50dp"
        android:text="@string/equal"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.428" />

</androidx.constraintlayout.widget.ConstraintLayout>